// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-inline-chunk > should use proper plugin options when inlineScripts is true 1`] = `
{
  "entry": {
    "index": [
      "src/index.js",
    ],
  },
  "plugins": [
    HtmlWebpackPlugin {
      "options": {
        "base": false,
        "cache": true,
        "chunks": [
          "index",
        ],
        "chunksSortMode": "auto",
        "compile": true,
        "entryName": "index",
        "excludeChunks": [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": {
          "collapseWhitespace": true,
          "keepClosingSlash": true,
          "minifyCSS": true,
          "minifyJS": {
            "format": {
              "ascii_only": true,
            },
            "mangle": {
              "safari10": true,
            },
          },
          "minifyURLs": true,
          "removeComments": false,
          "removeEmptyAttributes": true,
          "removeRedundantAttributes": true,
          "removeScriptTypeAttributes": true,
          "removeStyleLinkTypeAttributes": true,
          "useShortDoctype": true,
        },
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "<ROOT>/packages/core/static/template.html",
        "templateContent": false,
        "templateParameters": [Function],
        "title": "Rsbuild App",
        "xhtml": false,
      },
      "userOptions": {
        "chunks": [
          "index",
        ],
        "entryName": "index",
        "filename": "index.html",
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": {
          "collapseWhitespace": true,
          "keepClosingSlash": true,
          "minifyCSS": true,
          "minifyJS": {
            "format": {
              "ascii_only": true,
            },
            "mangle": {
              "safari10": true,
            },
          },
          "minifyURLs": true,
          "removeComments": false,
          "removeEmptyAttributes": true,
          "removeRedundantAttributes": true,
          "removeScriptTypeAttributes": true,
          "removeStyleLinkTypeAttributes": true,
          "useShortDoctype": true,
        },
        "scriptLoading": "defer",
        "template": "<ROOT>/packages/core/static/template.html",
        "templateParameters": [Function],
        "title": "Rsbuild App",
      },
      "version": 5,
    },
    InlineChunkHtmlPlugin {
      "distPath": {
        "css": "static/css",
        "js": "static/js",
      },
      "inlinedAssets": Set {},
      "name": "InlineChunkHtmlPlugin",
      "scriptTests": [
        /\\\\\\.\\(\\?:js\\|mjs\\|cjs\\|jsx\\)\\$/,
      ],
      "styleTests": [],
    },
    HtmlBasicPlugin {
      "environment": {
        "browserslist": [
          "chrome >= 87",
          "edge >= 88",
          "firefox >= 78",
          "safari >= 14",
        ],
        "distPath": "<ROOT>/packages/core/tests/dist",
        "entry": {
          "index": "src/index.js",
        },
        "htmlPaths": {
          "index": "index.html",
        },
        "index": 0,
        "name": "web",
        "normalizedConfig": {
          "dev": {
            "assetPrefix": "/",
            "client": {
              "host": "",
              "overlay": true,
              "path": "/rsbuild-hmr",
              "port": "",
            },
            "hmr": true,
            "lazyCompilation": undefined,
            "liveReload": true,
            "writeToDisk": false,
          },
          "html": {
            "crossorigin": false,
            "inject": "head",
            "meta": {
              "charset": {
                "charset": "UTF-8",
              },
              "viewport": "width=device-width, initial-scale=1.0",
            },
            "mountId": "root",
            "outputStructure": "flat",
            "scriptLoading": "defer",
            "title": "Rsbuild App",
          },
          "output": {
            "assetPrefix": "/",
            "charset": "ascii",
            "cssModules": {
              "auto": true,
              "exportGlobals": false,
              "exportLocalsConvention": "camelCase",
              "namedExport": false,
            },
            "dataUriLimit": {
              "font": 4096,
              "image": 4096,
              "media": 4096,
              "svg": 4096,
            },
            "distPath": {
              "css": "static/css",
              "font": "static/font",
              "html": "/",
              "image": "static/image",
              "js": "static/js",
              "media": "static/media",
              "root": "dist",
              "svg": "static/svg",
              "wasm": "static/wasm",
            },
            "emitAssets": true,
            "filename": {},
            "filenameHash": true,
            "injectStyles": false,
            "inlineScripts": true,
            "inlineStyles": false,
            "legalComments": "linked",
            "manifest": false,
            "minify": true,
            "polyfill": "usage",
            "sourceMap": {
              "css": false,
              "js": undefined,
            },
            "target": "web",
          },
          "performance": {
            "buildCache": true,
            "chunkSplit": {
              "strategy": "split-by-experience",
            },
            "printFileSize": true,
            "profile": false,
            "removeConsole": false,
            "removeMomentLocale": false,
          },
          "security": {
            "nonce": "",
            "sri": {
              "enable": false,
            },
          },
          "server": {
            "compress": true,
            "host": "0.0.0.0",
            "htmlFallback": "index",
            "open": false,
            "port": 3000,
            "printUrls": true,
            "strictPort": false,
          },
          "source": {
            "alias": {},
            "aliasStrategy": "prefer-tsconfig",
            "decorators": {
              "version": "2022-03",
            },
            "define": {},
            "entry": {
              "index": "src/index.js",
            },
            "preEntry": [],
            "tsconfigPath": "<ROOT>/packages/core/tests/tsconfig.json",
          },
          "tools": {
            "cssExtract": {
              "loaderOptions": {},
              "pluginOptions": {
                "ignoreOrder": true,
              },
            },
          },
        },
        "target": "web",
        "tsconfigPath": "<ROOT>/packages/core/tests/tsconfig.json",
      },
      "modifyTagsFn": undefined,
      "name": "HtmlBasicPlugin",
      "options": {
        "index": {},
      },
    },
  ],
}
`;

exports[`plugin-inline-chunk > should use proper plugin options when inlineStyles is true 1`] = `
{
  "entry": {
    "index": [
      "src/index.js",
    ],
  },
  "plugins": [
    HtmlWebpackPlugin {
      "options": {
        "base": false,
        "cache": true,
        "chunks": [
          "index",
        ],
        "chunksSortMode": "auto",
        "compile": true,
        "entryName": "index",
        "excludeChunks": [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": {
          "collapseWhitespace": true,
          "keepClosingSlash": true,
          "minifyCSS": true,
          "minifyJS": {
            "format": {
              "ascii_only": true,
            },
            "mangle": {
              "safari10": true,
            },
          },
          "minifyURLs": true,
          "removeComments": false,
          "removeEmptyAttributes": true,
          "removeRedundantAttributes": true,
          "removeScriptTypeAttributes": true,
          "removeStyleLinkTypeAttributes": true,
          "useShortDoctype": true,
        },
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "<ROOT>/packages/core/static/template.html",
        "templateContent": false,
        "templateParameters": [Function],
        "title": "Rsbuild App",
        "xhtml": false,
      },
      "userOptions": {
        "chunks": [
          "index",
        ],
        "entryName": "index",
        "filename": "index.html",
        "inject": "head",
        "meta": {
          "charset": {
            "charset": "UTF-8",
          },
          "viewport": "width=device-width, initial-scale=1.0",
        },
        "minify": {
          "collapseWhitespace": true,
          "keepClosingSlash": true,
          "minifyCSS": true,
          "minifyJS": {
            "format": {
              "ascii_only": true,
            },
            "mangle": {
              "safari10": true,
            },
          },
          "minifyURLs": true,
          "removeComments": false,
          "removeEmptyAttributes": true,
          "removeRedundantAttributes": true,
          "removeScriptTypeAttributes": true,
          "removeStyleLinkTypeAttributes": true,
          "useShortDoctype": true,
        },
        "scriptLoading": "defer",
        "template": "<ROOT>/packages/core/static/template.html",
        "templateParameters": [Function],
        "title": "Rsbuild App",
      },
      "version": 5,
    },
    InlineChunkHtmlPlugin {
      "distPath": {
        "css": "static/css",
        "js": "static/js",
      },
      "inlinedAssets": Set {},
      "name": "InlineChunkHtmlPlugin",
      "scriptTests": [],
      "styleTests": [
        /\\\\\\.css\\$/,
      ],
    },
    HtmlBasicPlugin {
      "environment": {
        "browserslist": [
          "chrome >= 87",
          "edge >= 88",
          "firefox >= 78",
          "safari >= 14",
        ],
        "distPath": "<ROOT>/packages/core/tests/dist",
        "entry": {
          "index": "src/index.js",
        },
        "htmlPaths": {
          "index": "index.html",
        },
        "index": 0,
        "name": "web",
        "normalizedConfig": {
          "dev": {
            "assetPrefix": "/",
            "client": {
              "host": "",
              "overlay": true,
              "path": "/rsbuild-hmr",
              "port": "",
            },
            "hmr": true,
            "lazyCompilation": undefined,
            "liveReload": true,
            "writeToDisk": false,
          },
          "html": {
            "crossorigin": false,
            "inject": "head",
            "meta": {
              "charset": {
                "charset": "UTF-8",
              },
              "viewport": "width=device-width, initial-scale=1.0",
            },
            "mountId": "root",
            "outputStructure": "flat",
            "scriptLoading": "defer",
            "title": "Rsbuild App",
          },
          "output": {
            "assetPrefix": "/",
            "charset": "ascii",
            "cssModules": {
              "auto": true,
              "exportGlobals": false,
              "exportLocalsConvention": "camelCase",
              "namedExport": false,
            },
            "dataUriLimit": {
              "font": 4096,
              "image": 4096,
              "media": 4096,
              "svg": 4096,
            },
            "distPath": {
              "css": "static/css",
              "font": "static/font",
              "html": "/",
              "image": "static/image",
              "js": "static/js",
              "media": "static/media",
              "root": "dist",
              "svg": "static/svg",
              "wasm": "static/wasm",
            },
            "emitAssets": true,
            "filename": {},
            "filenameHash": true,
            "injectStyles": false,
            "inlineScripts": false,
            "inlineStyles": true,
            "legalComments": "linked",
            "manifest": false,
            "minify": true,
            "polyfill": "usage",
            "sourceMap": {
              "css": false,
              "js": undefined,
            },
            "target": "web",
          },
          "performance": {
            "buildCache": true,
            "chunkSplit": {
              "strategy": "split-by-experience",
            },
            "printFileSize": true,
            "profile": false,
            "removeConsole": false,
            "removeMomentLocale": false,
          },
          "security": {
            "nonce": "",
            "sri": {
              "enable": false,
            },
          },
          "server": {
            "compress": true,
            "host": "0.0.0.0",
            "htmlFallback": "index",
            "open": false,
            "port": 3000,
            "printUrls": true,
            "strictPort": false,
          },
          "source": {
            "alias": {},
            "aliasStrategy": "prefer-tsconfig",
            "decorators": {
              "version": "2022-03",
            },
            "define": {},
            "entry": {
              "index": "src/index.js",
            },
            "preEntry": [],
            "tsconfigPath": "<ROOT>/packages/core/tests/tsconfig.json",
          },
          "tools": {
            "cssExtract": {
              "loaderOptions": {},
              "pluginOptions": {
                "ignoreOrder": true,
              },
            },
          },
        },
        "target": "web",
        "tsconfigPath": "<ROOT>/packages/core/tests/tsconfig.json",
      },
      "modifyTagsFn": undefined,
      "name": "HtmlBasicPlugin",
      "options": {
        "index": {},
      },
    },
  ],
}
`;
